PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016 PHP 7.0.6

- Core:
  . Fixed Bug #71859 (zend_objects_store_call_destructors operates on realloced
    memory, crashing). (Laruence)
  . Fixed bug #71841 (EG(error_zval) is not handled well). (Laruence)
  . Fixed bug #71750 (Multiple Heap Overflows in php_raw_url_encode/
    php_url_encode). (Stas)
  . Fixed bug #71731 (Null coalescing operator and ArrayAccess). (Nikita)
  . Fixed bug #69659 (ArrayAccess, isset() and the offsetExists method).
    (Nikita)
  . Fixed bug #62059 (ArrayObject and isset are not friends). (Nikita)
  . Fixed bug #71871 (Interfaces allow final and abstract functions). (Nikita)

- Curl:
  . Fixed bug #71831 (CURLOPT_NOPROXY applied as long instead of string).
    (Michael Sierks)

- ODBC:
  . Fixed bug #63171 (Script hangs after max_execution_time). (Remi)

- Opcache:
  . Fixed bug #71843 (null ptr deref ZEND_RETURN_SPEC_CONST_HANDLER).
    (Laruence)

- PDO:
  . Fixed bug #52098 (Own PDOStatement implementation ignore __call()).
    (Daniel kalaspuffar, Julien)

- Postgres:
  . Fixed bug #71820 (pg_fetch_object binds parameters before
    call constructor). (Anatol)

- SPL:
  . Fixed bug #71838 (Deserializing serialized SPLObjectStorage-Object can't
    access properties in PHP). (Nikita)
  . Fixed bug #52339 (SPL autoloader breaks class_exists()). (Nikita)
  . Fixed bug #67582 (Cloned SplObjectStorage with overwritten getHash fails
    offsetExists()). (Nikita)
  . Fixed bug #71735 (Double-free in SplDoublyLinkedList::offsetSet). (Stas)

- Standard:
  . Fixed bug #71891 (header_register_callback() and
    register_shutdown_function()). (Laruence)
  . Fixed bug #71884 (Null pointer deref (segfault) in
    stream_context_get_default). (Laruence)
  . Fixed bug #71837 (Wrong arrays behaviour). (Laruence)